@@ -1,4 +1,3 @@
-
 ---Thread-Announcement------------------------------------------
 
 Thread #x is the program's root thread
@@ -52,5 +51,3 @@ Thread #x: pthread_cond_{timed}wait: cond is associated with a different mutex
    by 0x........: pthread_cond_wait@* (hg_intercepts.c:...)
    by 0x........: main (tc23_bogus_condwait.c:85)
 
-
-ERROR SUMMARY: 7 errors from 7 contexts (suppressed: 0 from 0)
