@@ -1,4 +1,3 @@
-
 ---Thread-Announcement------------------------------------------
 
 Thread #x is the program's root thread
@@ -96,5 +95,3 @@ Thread #x: pthread_cond_{signal,broadcast}: dubious: associated lock is not held
    by 0x........: mythread_wrapper (hg_intercepts.c:...)
    ...
 
-
-ERROR SUMMARY: 11 errors from 11 contexts (suppressed: 0 from 0)
