@@ -1,4 +1,3 @@
-
 ---Thread-Announcement------------------------------------------
 
 Thread #x is the program's root thread
@@ -60,5 +59,3 @@ Thread #x: pthread_cond_{timed}wait: cond is associated with a different mutex
    by 0x........: pthread_cond_wait@* (hg_intercepts.c:...)
    by 0x........: main (tc23_bogus_condwait.c:78)
 
-
-ERROR SUMMARY: 8 errors from 8 contexts (suppressed: 0 from 0)
