@@ -1,1 +1,3 @@
 prog: tc23_bogus_condwait
+vgopts: -q  --check-cond-signal-mutex=yes
+
